# Portofolio

./: README.md
prediction_project/: .gitignore  main.py  pyproject.toml
prediction_project/config/: settings.py  urls.py
prediction_project/predictor/: urls.py  views.py
prediction_project/predictor/templates/: about.html  contact.html  home.html  predict.html
prediction_project/predictor/templates/projects/: index.html  nlp_topic_modeling.html
prediction_project/projects/simple_prediction_regression/: stock_linear_regression.py
prediction_project/services/: urls.py  views.py
prediction_project/services/templates/: contact.html  home.html
prediction_project/services/templates/projects_html/: index.html
prediction_project/services/templates/projects_html/marketing_chatbot/: marketing_chat.html
prediction_project/services/templates/projects_html/nlp_tm/: nlp_topic_modeling.html
prediction_project/services/templates/projects_html/whisper_retrained/: whisperetrained.html
